force-app/main/default/objects/Quote/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <formula>Contact.Contact_Full_Name__c &amp; BR () &amp; 
Opportunity.Account.Name &amp; BR () &amp; 
Opportunity.Account_Address__c &amp; BR () &amp; 
Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention:</label>
    <type>Text</type>
</CustomField>