force-app/main/default/objects/Quote/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <description>Contact &amp; Address formula for quote template</description>
    <formula>Contact.Contact_Full_Name__c &amp; BR() &amp; 
Opportunity.Account_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Address</label>
    <type>Text</type>
</CustomField>