force-app/main/default/objects/Quote/fields/Prepared_by__c.field-meta.xml
<CustomField>
    <fullName>Prepared_by__c</fullName>
    <description>Owner details formula for quote template</description>
    <formula>Owner:User.Person_Name__c &amp; BR() &amp; 
Owner:User.Title &amp; BR() &amp; 
Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepared by</label>
    <type>Text</type>
</CustomField>