force-app/main/default/objects/Quote/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote #</label>
    <type>Text</type>
</CustomField>