force-app/main/default/objects/Quote/fields/Quote_Owner_Name_Phone_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_Name_Phone_Email__c</fullName>
    <formula>Owner:User.Person_Name__c &amp; BR() &amp; 
Owner:User.Phone &amp; BR() &amp; 
Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner Name/Phone/Email</label>
    <type>Text</type>
</CustomField>