force-app/main/default/objects/Quote/recordTypes/CP_Quote.recordType-meta.xml
<RecordType>
    <fullName>CP_Quote</fullName>
    <active>true</active>
    <label>CP Quote</label>
</RecordType>