force-app/main/default/objects/Quote/recordTypes/FS_Quote.recordType-meta.xml
<RecordType>
    <fullName>FS_Quote</fullName>
    <active>true</active>
    <description>FS HarborQuote</description>
    <label>FS Quote</label>
</RecordType>